added: accessor and mutator dry principal,
